<resources>
    <string name="app_name">Ageyotime</string>
    <string name="age_in_minutes">Age In Minutes</string>
    <string name="in_minutes">In Minutes</string>
    <string name="calculate_your">Calculate Your</string>
    <string name="age">Age</string>
    <string name="select_date">SELECT DATE</string>

    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
    <item name="colorPrimary">#FF018786</item></style>

</resources>